# prototype2

./: .gitignore  CMakeLists.txt  README.md
res/assets/: assets.xml
res/levels/test/: level.lvl
res/models/: pb.blend  pb.blend1  pb.dae
res/models/brd/: brd.blend  brd.blend1  brd.dae
res/models/cavern/: cavern.blend  cavern.blend1  cavern.dae
res/models/cliffs/: cliffs.blend
res/models/couch/: couch.blend  couch.blend1  couch.dae
res/models/docks/: cliff_side_albedo.afphoto  docks - Copy.blend  docks.blend  docks.blend1  docks.dae  docks.fbx  docks.glb  docks.gltf
res/models/docks_old/: docks.blend  docks.blend1
res/models/duck/: duck.blend  duck.blend1  duck.dae
res/models/flygy/: flygy.blend  flygy.blend1  flygy.dae  flygy.fbx
res/models/garden/: garden.blend  garden.blend1  garden.mtl
res/models/gy/: gy.blend  gy.blend1  gy.dae  gy.fbx
res/models/island/: island.blend  island.blend1  island.dae  island.fbx  island.glb  island.mtl  old_island
res/models/level1/: level1.blend  level1.blend1  level1.mtl  wall1_albedo.afphoto  window1_albedo.afphoto  window_albedo.afphoto
res/models/lilduck/: lilduck.blend  lilduck.blend1  lilduck.dae  lilduck.fbx  lilduck.glb
res/models/monkey/: monkey.blend  monkey.blend1  monkey.dae  monkey.fbx  monkey.glb  monkey.gltf  monkey.mtl
res/models/moon/: moon.blend  moon.dae
res/models/pb/: pb.dae
res/models/pb_lobby/: pb_lobby.blend  pb_lobby.blend1  pb_lobby.dae
res/models/sh/: sh.blend  sh.blend1  sh.dae
res/models/sphere/: sphere.dae  sphere.mtl
res/models/swd/: sh.dae  swd.blend  swd.blend1  swd.dae
res/models/test/: Character Running.blend  Character Running.dae  Character Running.fbx
res/models/waterside/: TexturesCom_Asphalt_1x1_512_albedo.tif  TexturesCom_Marble_TilesRectangle4_512_albedo.tif  TexturesCom_Marble_TilesRectangle4_512_normal.tif  TexturesCom_Various_EnergyPole_1K_albedo.tif  waterside.blend  waterside.blend1  waterside.dae
res/scenes/: cavern.prt  docks.prt
res/shaders/: billboard.frag  billboard.frag.in  billboard.vert  billboard.vert.in  cel.frag  cel.frag.in  cel.frag.spv  compile.sh  composition.frag  composition.vert  grid.frag  grid.vert  model.frag  model.frag.in  model.frag.spv  model.vert  model.vert.in  model.vert.spv  pbr.frag  pbr.frag.in  pbr_transparent.frag  pbr_transparent.frag.in  picker.frag  picker.frag.spv  picker.vert  picker.vert.spv  shader.frag  shader.frag.in  shader.vert  shader.vert.in  shadow_map.frag.in  shadow_map.vert  shadow_map.vert.in  shadow_map_animated.vert  shadow_map_animated.vert.in  skybox.frag  skybox.frag.spv  skybox.vert  skybox.vert.spv  standard.frag  (+34 more)
src/: main.cpp
src/config/: prototype2Config.h  prototype2Config.h.in
src/container/: array.h  hash_map.h  hash_set.h  hash_table.h  optional.h  priority_queue.h  vector.h
src/entity_component_system/component/: component.h  component_manager.cpp  component_manager.h
src/entity_component_system/entity/: entity.cpp  entity.h  entity_manager.cpp  entity_manager.h
src/entity_component_system/system/: render_system.cpp  render_system.h
src/game/: game.cpp  game.h
src/game/component/: animation.h  component.h
src/game/editor/: editor.cpp  editor.h  editor_gui.cpp  editor_gui.h
src/game/entities/: static_entity_manager.cpp  static_entity_manager.h
src/game/level/: level_map.cpp  level_map.h
src/game/scene/: entity.h  id.h  scene.cpp  scene.h  scene_serialization.cpp  scene_serialization.h
src/game/system/: physics_system.cpp  physics_system.h
src/game/system/animation/: animation_clip.cpp  animation_clip.h  animation_system.cpp  animation_system.h
src/game/system/character/: character.cpp  character.h  character_system.cpp  character_system.h  humanoid.h  player.cpp  player.h
src/game/system/lighting/: lighting_system.cpp  lighting_system.h
src/game/system/physics/: aabb.cpp  aabb.h  aabb_tree.cpp  aabb_tree.h  bounding_box.h  collider_tag.h  colliders.h  collision.cpp  collision.h  collision_system.cpp  collision_system.h  physics_system.cpp  physics_system.h  shapes.cpp  shapes.h
src/game/system/player/: player.cpp  player.h
src/graphics/camera/: camera.cpp  camera.h
src/graphics/geometry/: animation.h  billboard.h  fbx_document.cpp  fbx_document.h  fbx_scene.cpp  fbx_scene.h  mesh.cpp  mesh.h  model.cpp  model.h  parametric_shapes.cpp  parametric_shapes.h  texture.cpp  texture.h
src/graphics/lighting/: light.h
src/graphics/render_system/: render_system.h
src/graphics/vulkan/: assets.h  game_renderer.cpp  game_renderer.h  graphics_pipeline.h  imgui_application.cpp  imgui_application.h  imgui_renderer.cpp  imgui_renderer.h  material_pipeline.cpp  material_pipeline.h  render_pass.h  render_pipeline.cpp  render_pipeline.h  ubo.h  vulkan_application.cpp  vulkan_application.h  vulkan_common.cpp  vulkan_common.h  vulkan_prt_game.cpp  vulkan_prt_game.h  vulkan_util.cpp  vulkan_util.h
src/main/: main.cpp
src/memory/: allocator.h  container_allocator.cpp  container_allocator.h  memory_util.cpp  memory_util.h  pool_allocator.cpp  pool_allocator.h  stack_allocator.cpp  stack_allocator.h
src/system/assets/: asset_manager.cpp  asset_manager.h  model_manager.cpp  model_manager.h  texture_manager.cpp  texture_manager.h
src/system/input/: input.cpp  input.h
src/util/: io_util.cpp  io_util.h  math_util.cpp  math_util.h  physics_util.cpp  physics_util.h  string_util.cpp  string_util.h  vulkan_util.cpp  vulkan_util.h
test/: testMemory.cpp  testMemory.h
test/src/: prt_test.cpp  prt_test.h
test/src/container/: test_array.cpp  test_hash_map.cpp  test_hash_set.cpp  test_hash_table.cpp  test_optional.cpp  test_priority_queue.cpp  test_vector.cpp
test/src/entity_component_system/: test_entity_component_system.cpp
test/src/memory/: test_container_allocator.cpp  test_pool_allocator.cpp  test_stack_allocator.cpp
